--- a/wechat_mini/小程序.md
+++ b/wechat_mini/小程序.md
@@ -75,7 +75,7 @@
 很明显这个地址就是该小程序调用的接口的地址。我们猜测该接口也许已经不好用了，才导致了刚刚的问题。我们可以使用**postman**测试一下。
 
 在`app.js`中我们可以看到`globalData`中的`appid`和`apikey`的值分别是多少。它们分别对应的就是百思不得姐接口调用的必须参数
-`showapi_appid`和`showapi_sign`我们将它们复制后，使用**[postman](https://www.getpostman.com/)**测试可以看到如下画面：
+`showapi_appid`和`showapi_sign`我们将它们复制后，使用[postman](https://www.getpostman.com/)测试可以看到如下画面：
 
 ![](bai.gif)
 
