--- a/暑假7天集训进程.md
+++ b/暑假7天集训进程.md
@@ -1,4 +1,4 @@
-1. Markdown
+## 1. Markdown
 
  - 首先注册 www.github.com
  - [参考资料](https://github.com/UncleLincoln/Learning-Markdown)
@@ -14,4 +14,16 @@
    
    5. 熟悉 Markdown 所有的语法
 
-2. 
+## 2. [安装小程序开发工具](https://github.com/UncleLincoln/trainee/blob/master/wechat_mini/小程序.md#准备工作)
+
+## 3. [分析 IOS 计算器](https://github.com/UncleLincoln/trainee/blob/master/wechat_mini/小程序.md#ios计算器)
+
+ - 1. 按钮是如何摆放好的
+
+ - 2. 颜色是如何设计的，色值是多少
+
+ - 3. 点击+号后，干了些什么
+
+## 4. [百思不得姐程序](https://github.com/UncleLincoln/trainee/blob/master/wechat_mini/小程序.md#百思不得姐)
+
+
