--- a/暑假7天集训进程.md
+++ b/暑假7天集训进程.md
@@ -26,4 +26,6 @@
 
 ## 4. [百思不得姐程序](https://github.com/UncleLincoln/trainee/blob/master/wechat_mini/小程序.md#百思不得姐)
 
+## 5. [MySQL](https://github.com/UncleLincoln/trainee/blob/master/MySQL课堂笔记.md)
 
+## 6. [Python](https://github.com/UncleLincoln/trainee/blob/master/Python课堂.md)
