--- a/Python3/Anaconda-Jupyter/Python181103-98.ipynb
+++ b/Python3/Anaconda-Jupyter/Python181103-98.ipynb
@@ -2,24 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'a': 'b', 1: 2}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#!/usr/bin/python\n",
     "# -*- coding: UTF-8 -*-\n",
     " \n",
-    "i = ['a', 'b']\n",
-    "l = [1, 2]\n",
-    "print (dict([i,l]))"
+    "if __name__ == '__main__':\n",
+    "    fp = open('test.txt','w')\n",
+    "    string = input('please input a string:\\n')\n",
+    "    string = string.upper()\n",
+    "    fp.write(string)\n",
+    "    fp = open('test.txt','r')\n",
+    "    print (fp.read())\n",
+    "    fp.close()"
    ]
   },
   {
