--- a/Python3/Anaconda-Jupyter/作业2.ipynb
+++ b/Python3/Anaconda-Jupyter/作业2.ipynb
@@ -2,9 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -13,23 +13,407 @@
      "text": [
       "正在抓取第1首歌曲热评...\n",
       "第1首歌曲热评抓取成功\n",
-      "正在抓取第2首歌曲热评...\n"
-     ]
-    },
-    {
-     "ename": "UnicodeEncodeError",
-     "evalue": "'gbk' codec can't encode character '\\u200b' in position 63: illegal multibyte sequence",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mUnicodeEncodeError\u001b[0m                        Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-6-6c459b400679>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     61\u001b[0m \u001b[1;32mwhile\u001b[0m \u001b[0mnum\u001b[0m \u001b[1;33m<\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mhot_song_name\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m    \u001b[1;31m#保存所有热歌榜中的热评\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     62\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'正在抓取第%d首歌曲热评...'\u001b[0m\u001b[1;33m%\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnum\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 63\u001b[1;33m     \u001b[0mget_hotComments\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mhot_song_name\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mnum\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mhot_song_id\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mnum\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     64\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'第%d首歌曲热评抓取成功'\u001b[0m\u001b[1;33m%\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnum\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     65\u001b[0m     \u001b[0mnum\u001b[0m\u001b[1;33m+=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-6-6c459b400679>\u001b[0m in \u001b[0;36mget_hotComments\u001b[1;34m(hot_song_name, hot_song_id)\u001b[0m\n\u001b[0;32m     49\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mitem\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mhot_commit\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     50\u001b[0m         \u001b[0mnum\u001b[0m\u001b[1;33m+=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 51\u001b[1;33m         \u001b[0mfhandle\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnum\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m'.'\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mitem\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'content'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m'\\n'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     52\u001b[0m     \u001b[0mfhandle\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'\\n==============================================\\n\\n'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     53\u001b[0m     \u001b[0mfhandle\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mUnicodeEncodeError\u001b[0m: 'gbk' codec can't encode character '\\u200b' in position 63: illegal multibyte sequence"
+      "正在抓取第2首歌曲热评...\n",
+      "第2首歌曲热评抓取成功\n",
+      "正在抓取第3首歌曲热评...\n",
+      "第3首歌曲热评抓取成功\n",
+      "正在抓取第4首歌曲热评...\n",
+      "第4首歌曲热评抓取成功\n",
+      "正在抓取第5首歌曲热评...\n",
+      "第5首歌曲热评抓取成功\n",
+      "正在抓取第6首歌曲热评...\n",
+      "第6首歌曲热评抓取成功\n",
+      "正在抓取第7首歌曲热评...\n",
+      "第7首歌曲热评抓取成功\n",
+      "正在抓取第8首歌曲热评...\n",
+      "第8首歌曲热评抓取成功\n",
+      "正在抓取第9首歌曲热评...\n",
+      "第9首歌曲热评抓取成功\n",
+      "正在抓取第10首歌曲热评...\n",
+      "第10首歌曲热评抓取成功\n",
+      "正在抓取第11首歌曲热评...\n",
+      "第11首歌曲热评抓取成功\n",
+      "正在抓取第12首歌曲热评...\n",
+      "第12首歌曲热评抓取成功\n",
+      "正在抓取第13首歌曲热评...\n",
+      "第13首歌曲热评抓取成功\n",
+      "正在抓取第14首歌曲热评...\n",
+      "第14首歌曲热评抓取成功\n",
+      "正在抓取第15首歌曲热评...\n",
+      "第15首歌曲热评抓取成功\n",
+      "正在抓取第16首歌曲热评...\n",
+      "第16首歌曲热评抓取成功\n",
+      "正在抓取第17首歌曲热评...\n",
+      "第17首歌曲热评抓取成功\n",
+      "正在抓取第18首歌曲热评...\n",
+      "第18首歌曲热评抓取成功\n",
+      "正在抓取第19首歌曲热评...\n",
+      "第19首歌曲热评抓取成功\n",
+      "正在抓取第20首歌曲热评...\n",
+      "第20首歌曲热评抓取成功\n",
+      "正在抓取第21首歌曲热评...\n",
+      "第21首歌曲热评抓取成功\n",
+      "正在抓取第22首歌曲热评...\n",
+      "第22首歌曲热评抓取成功\n",
+      "正在抓取第23首歌曲热评...\n",
+      "第23首歌曲热评抓取成功\n",
+      "正在抓取第24首歌曲热评...\n",
+      "第24首歌曲热评抓取成功\n",
+      "正在抓取第25首歌曲热评...\n",
+      "第25首歌曲热评抓取成功\n",
+      "正在抓取第26首歌曲热评...\n",
+      "第26首歌曲热评抓取成功\n",
+      "正在抓取第27首歌曲热评...\n",
+      "第27首歌曲热评抓取成功\n",
+      "正在抓取第28首歌曲热评...\n",
+      "第28首歌曲热评抓取成功\n",
+      "正在抓取第29首歌曲热评...\n",
+      "第29首歌曲热评抓取成功\n",
+      "正在抓取第30首歌曲热评...\n",
+      "第30首歌曲热评抓取成功\n",
+      "正在抓取第31首歌曲热评...\n",
+      "第31首歌曲热评抓取成功\n",
+      "正在抓取第32首歌曲热评...\n",
+      "第32首歌曲热评抓取成功\n",
+      "正在抓取第33首歌曲热评...\n",
+      "第33首歌曲热评抓取成功\n",
+      "正在抓取第34首歌曲热评...\n",
+      "第34首歌曲热评抓取成功\n",
+      "正在抓取第35首歌曲热评...\n",
+      "第35首歌曲热评抓取成功\n",
+      "正在抓取第36首歌曲热评...\n",
+      "第36首歌曲热评抓取成功\n",
+      "正在抓取第37首歌曲热评...\n",
+      "第37首歌曲热评抓取成功\n",
+      "正在抓取第38首歌曲热评...\n",
+      "第38首歌曲热评抓取成功\n",
+      "正在抓取第39首歌曲热评...\n",
+      "第39首歌曲热评抓取成功\n",
+      "正在抓取第40首歌曲热评...\n",
+      "第40首歌曲热评抓取成功\n",
+      "正在抓取第41首歌曲热评...\n",
+      "第41首歌曲热评抓取成功\n",
+      "正在抓取第42首歌曲热评...\n",
+      "第42首歌曲热评抓取成功\n",
+      "正在抓取第43首歌曲热评...\n",
+      "第43首歌曲热评抓取成功\n",
+      "正在抓取第44首歌曲热评...\n",
+      "第44首歌曲热评抓取成功\n",
+      "正在抓取第45首歌曲热评...\n",
+      "第45首歌曲热评抓取成功\n",
+      "正在抓取第46首歌曲热评...\n",
+      "第46首歌曲热评抓取成功\n",
+      "正在抓取第47首歌曲热评...\n",
+      "第47首歌曲热评抓取成功\n",
+      "正在抓取第48首歌曲热评...\n",
+      "第48首歌曲热评抓取成功\n",
+      "正在抓取第49首歌曲热评...\n",
+      "第49首歌曲热评抓取成功\n",
+      "正在抓取第50首歌曲热评...\n",
+      "第50首歌曲热评抓取成功\n",
+      "正在抓取第51首歌曲热评...\n",
+      "第51首歌曲热评抓取成功\n",
+      "正在抓取第52首歌曲热评...\n",
+      "第52首歌曲热评抓取成功\n",
+      "正在抓取第53首歌曲热评...\n",
+      "第53首歌曲热评抓取成功\n",
+      "正在抓取第54首歌曲热评...\n",
+      "第54首歌曲热评抓取成功\n",
+      "正在抓取第55首歌曲热评...\n",
+      "第55首歌曲热评抓取成功\n",
+      "正在抓取第56首歌曲热评...\n",
+      "第56首歌曲热评抓取成功\n",
+      "正在抓取第57首歌曲热评...\n",
+      "第57首歌曲热评抓取成功\n",
+      "正在抓取第58首歌曲热评...\n",
+      "第58首歌曲热评抓取成功\n",
+      "正在抓取第59首歌曲热评...\n",
+      "第59首歌曲热评抓取成功\n",
+      "正在抓取第60首歌曲热评...\n",
+      "第60首歌曲热评抓取成功\n",
+      "正在抓取第61首歌曲热评...\n",
+      "第61首歌曲热评抓取成功\n",
+      "正在抓取第62首歌曲热评...\n",
+      "第62首歌曲热评抓取成功\n",
+      "正在抓取第63首歌曲热评...\n",
+      "第63首歌曲热评抓取成功\n",
+      "正在抓取第64首歌曲热评...\n",
+      "第64首歌曲热评抓取成功\n",
+      "正在抓取第65首歌曲热评...\n",
+      "第65首歌曲热评抓取成功\n",
+      "正在抓取第66首歌曲热评...\n",
+      "第66首歌曲热评抓取成功\n",
+      "正在抓取第67首歌曲热评...\n",
+      "第67首歌曲热评抓取成功\n",
+      "正在抓取第68首歌曲热评...\n",
+      "第68首歌曲热评抓取成功\n",
+      "正在抓取第69首歌曲热评...\n",
+      "第69首歌曲热评抓取成功\n",
+      "正在抓取第70首歌曲热评...\n",
+      "第70首歌曲热评抓取成功\n",
+      "正在抓取第71首歌曲热评...\n",
+      "第71首歌曲热评抓取成功\n",
+      "正在抓取第72首歌曲热评...\n",
+      "第72首歌曲热评抓取成功\n",
+      "正在抓取第73首歌曲热评...\n",
+      "第73首歌曲热评抓取成功\n",
+      "正在抓取第74首歌曲热评...\n",
+      "第74首歌曲热评抓取成功\n",
+      "正在抓取第75首歌曲热评...\n",
+      "第75首歌曲热评抓取成功\n",
+      "正在抓取第76首歌曲热评...\n",
+      "第76首歌曲热评抓取成功\n",
+      "正在抓取第77首歌曲热评...\n",
+      "第77首歌曲热评抓取成功\n",
+      "正在抓取第78首歌曲热评...\n",
+      "第78首歌曲热评抓取成功\n",
+      "正在抓取第79首歌曲热评...\n",
+      "第79首歌曲热评抓取成功\n",
+      "正在抓取第80首歌曲热评...\n",
+      "第80首歌曲热评抓取成功\n",
+      "正在抓取第81首歌曲热评...\n",
+      "第81首歌曲热评抓取成功\n",
+      "正在抓取第82首歌曲热评...\n",
+      "第82首歌曲热评抓取成功\n",
+      "正在抓取第83首歌曲热评...\n",
+      "第83首歌曲热评抓取成功\n",
+      "正在抓取第84首歌曲热评...\n",
+      "第84首歌曲热评抓取成功\n",
+      "正在抓取第85首歌曲热评...\n",
+      "第85首歌曲热评抓取成功\n",
+      "正在抓取第86首歌曲热评...\n",
+      "第86首歌曲热评抓取成功\n",
+      "正在抓取第87首歌曲热评...\n",
+      "第87首歌曲热评抓取成功\n",
+      "正在抓取第88首歌曲热评...\n",
+      "第88首歌曲热评抓取成功\n",
+      "正在抓取第89首歌曲热评...\n",
+      "第89首歌曲热评抓取成功\n",
+      "正在抓取第90首歌曲热评...\n",
+      "第90首歌曲热评抓取成功\n",
+      "正在抓取第91首歌曲热评...\n",
+      "第91首歌曲热评抓取成功\n",
+      "正在抓取第92首歌曲热评...\n",
+      "第92首歌曲热评抓取成功\n",
+      "正在抓取第93首歌曲热评...\n",
+      "第93首歌曲热评抓取成功\n",
+      "正在抓取第94首歌曲热评...\n",
+      "第94首歌曲热评抓取成功\n",
+      "正在抓取第95首歌曲热评...\n",
+      "第95首歌曲热评抓取成功\n",
+      "正在抓取第96首歌曲热评...\n",
+      "第96首歌曲热评抓取成功\n",
+      "正在抓取第97首歌曲热评...\n",
+      "第97首歌曲热评抓取成功\n",
+      "正在抓取第98首歌曲热评...\n",
+      "第98首歌曲热评抓取成功\n",
+      "正在抓取第99首歌曲热评...\n",
+      "第99首歌曲热评抓取成功\n",
+      "正在抓取第100首歌曲热评...\n",
+      "第100首歌曲热评抓取成功\n",
+      "正在抓取第101首歌曲热评...\n",
+      "第101首歌曲热评抓取成功\n",
+      "正在抓取第102首歌曲热评...\n",
+      "第102首歌曲热评抓取成功\n",
+      "正在抓取第103首歌曲热评...\n",
+      "第103首歌曲热评抓取成功\n",
+      "正在抓取第104首歌曲热评...\n",
+      "第104首歌曲热评抓取成功\n",
+      "正在抓取第105首歌曲热评...\n",
+      "第105首歌曲热评抓取成功\n",
+      "正在抓取第106首歌曲热评...\n",
+      "第106首歌曲热评抓取成功\n",
+      "正在抓取第107首歌曲热评...\n",
+      "第107首歌曲热评抓取成功\n",
+      "正在抓取第108首歌曲热评...\n",
+      "第108首歌曲热评抓取成功\n",
+      "正在抓取第109首歌曲热评...\n",
+      "第109首歌曲热评抓取成功\n",
+      "正在抓取第110首歌曲热评...\n",
+      "第110首歌曲热评抓取成功\n",
+      "正在抓取第111首歌曲热评...\n",
+      "第111首歌曲热评抓取成功\n",
+      "正在抓取第112首歌曲热评...\n",
+      "第112首歌曲热评抓取成功\n",
+      "正在抓取第113首歌曲热评...\n",
+      "第113首歌曲热评抓取成功\n",
+      "正在抓取第114首歌曲热评...\n",
+      "第114首歌曲热评抓取成功\n",
+      "正在抓取第115首歌曲热评...\n",
+      "第115首歌曲热评抓取成功\n",
+      "正在抓取第116首歌曲热评...\n",
+      "第116首歌曲热评抓取成功\n",
+      "正在抓取第117首歌曲热评...\n",
+      "第117首歌曲热评抓取成功\n",
+      "正在抓取第118首歌曲热评...\n",
+      "第118首歌曲热评抓取成功\n",
+      "正在抓取第119首歌曲热评...\n",
+      "第119首歌曲热评抓取成功\n",
+      "正在抓取第120首歌曲热评...\n",
+      "第120首歌曲热评抓取成功\n",
+      "正在抓取第121首歌曲热评...\n",
+      "第121首歌曲热评抓取成功\n",
+      "正在抓取第122首歌曲热评...\n",
+      "第122首歌曲热评抓取成功\n",
+      "正在抓取第123首歌曲热评...\n",
+      "第123首歌曲热评抓取成功\n",
+      "正在抓取第124首歌曲热评...\n",
+      "第124首歌曲热评抓取成功\n",
+      "正在抓取第125首歌曲热评...\n",
+      "第125首歌曲热评抓取成功\n",
+      "正在抓取第126首歌曲热评...\n",
+      "第126首歌曲热评抓取成功\n",
+      "正在抓取第127首歌曲热评...\n",
+      "第127首歌曲热评抓取成功\n",
+      "正在抓取第128首歌曲热评...\n",
+      "第128首歌曲热评抓取成功\n",
+      "正在抓取第129首歌曲热评...\n",
+      "第129首歌曲热评抓取成功\n",
+      "正在抓取第130首歌曲热评...\n",
+      "第130首歌曲热评抓取成功\n",
+      "正在抓取第131首歌曲热评...\n",
+      "第131首歌曲热评抓取成功\n",
+      "正在抓取第132首歌曲热评...\n",
+      "第132首歌曲热评抓取成功\n",
+      "正在抓取第133首歌曲热评...\n",
+      "第133首歌曲热评抓取成功\n",
+      "正在抓取第134首歌曲热评...\n",
+      "第134首歌曲热评抓取成功\n",
+      "正在抓取第135首歌曲热评...\n",
+      "第135首歌曲热评抓取成功\n",
+      "正在抓取第136首歌曲热评...\n",
+      "第136首歌曲热评抓取成功\n",
+      "正在抓取第137首歌曲热评...\n",
+      "第137首歌曲热评抓取成功\n",
+      "正在抓取第138首歌曲热评...\n",
+      "第138首歌曲热评抓取成功\n",
+      "正在抓取第139首歌曲热评...\n",
+      "第139首歌曲热评抓取成功\n",
+      "正在抓取第140首歌曲热评...\n",
+      "第140首歌曲热评抓取成功\n",
+      "正在抓取第141首歌曲热评...\n",
+      "第141首歌曲热评抓取成功\n",
+      "正在抓取第142首歌曲热评...\n",
+      "第142首歌曲热评抓取成功\n",
+      "正在抓取第143首歌曲热评...\n",
+      "第143首歌曲热评抓取成功\n",
+      "正在抓取第144首歌曲热评...\n",
+      "第144首歌曲热评抓取成功\n",
+      "正在抓取第145首歌曲热评...\n",
+      "第145首歌曲热评抓取成功\n",
+      "正在抓取第146首歌曲热评...\n",
+      "第146首歌曲热评抓取成功\n",
+      "正在抓取第147首歌曲热评...\n",
+      "第147首歌曲热评抓取成功\n",
+      "正在抓取第148首歌曲热评...\n",
+      "第148首歌曲热评抓取成功\n",
+      "正在抓取第149首歌曲热评...\n",
+      "第149首歌曲热评抓取成功\n",
+      "正在抓取第150首歌曲热评...\n",
+      "第150首歌曲热评抓取成功\n",
+      "正在抓取第151首歌曲热评...\n",
+      "第151首歌曲热评抓取成功\n",
+      "正在抓取第152首歌曲热评...\n",
+      "第152首歌曲热评抓取成功\n",
+      "正在抓取第153首歌曲热评...\n",
+      "第153首歌曲热评抓取成功\n",
+      "正在抓取第154首歌曲热评...\n",
+      "第154首歌曲热评抓取成功\n",
+      "正在抓取第155首歌曲热评...\n",
+      "第155首歌曲热评抓取成功\n",
+      "正在抓取第156首歌曲热评...\n",
+      "第156首歌曲热评抓取成功\n",
+      "正在抓取第157首歌曲热评...\n",
+      "第157首歌曲热评抓取成功\n",
+      "正在抓取第158首歌曲热评...\n",
+      "第158首歌曲热评抓取成功\n",
+      "正在抓取第159首歌曲热评...\n",
+      "第159首歌曲热评抓取成功\n",
+      "正在抓取第160首歌曲热评...\n",
+      "第160首歌曲热评抓取成功\n",
+      "正在抓取第161首歌曲热评...\n",
+      "第161首歌曲热评抓取成功\n",
+      "正在抓取第162首歌曲热评...\n",
+      "第162首歌曲热评抓取成功\n",
+      "正在抓取第163首歌曲热评...\n",
+      "第163首歌曲热评抓取成功\n",
+      "正在抓取第164首歌曲热评...\n",
+      "第164首歌曲热评抓取成功\n",
+      "正在抓取第165首歌曲热评...\n",
+      "第165首歌曲热评抓取成功\n",
+      "正在抓取第166首歌曲热评...\n",
+      "第166首歌曲热评抓取成功\n",
+      "正在抓取第167首歌曲热评...\n",
+      "第167首歌曲热评抓取成功\n",
+      "正在抓取第168首歌曲热评...\n",
+      "第168首歌曲热评抓取成功\n",
+      "正在抓取第169首歌曲热评...\n",
+      "第169首歌曲热评抓取成功\n",
+      "正在抓取第170首歌曲热评...\n",
+      "第170首歌曲热评抓取成功\n",
+      "正在抓取第171首歌曲热评...\n",
+      "第171首歌曲热评抓取成功\n",
+      "正在抓取第172首歌曲热评...\n",
+      "第172首歌曲热评抓取成功\n",
+      "正在抓取第173首歌曲热评...\n",
+      "第173首歌曲热评抓取成功\n",
+      "正在抓取第174首歌曲热评...\n",
+      "第174首歌曲热评抓取成功\n",
+      "正在抓取第175首歌曲热评...\n",
+      "第175首歌曲热评抓取成功\n",
+      "正在抓取第176首歌曲热评...\n",
+      "第176首歌曲热评抓取成功\n",
+      "正在抓取第177首歌曲热评...\n",
+      "第177首歌曲热评抓取成功\n",
+      "正在抓取第178首歌曲热评...\n",
+      "第178首歌曲热评抓取成功\n",
+      "正在抓取第179首歌曲热评...\n",
+      "第179首歌曲热评抓取成功\n",
+      "正在抓取第180首歌曲热评...\n",
+      "第180首歌曲热评抓取成功\n",
+      "正在抓取第181首歌曲热评...\n",
+      "第181首歌曲热评抓取成功\n",
+      "正在抓取第182首歌曲热评...\n",
+      "第182首歌曲热评抓取成功\n",
+      "正在抓取第183首歌曲热评...\n",
+      "第183首歌曲热评抓取成功\n",
+      "正在抓取第184首歌曲热评...\n",
+      "第184首歌曲热评抓取成功\n",
+      "正在抓取第185首歌曲热评...\n",
+      "第185首歌曲热评抓取成功\n",
+      "正在抓取第186首歌曲热评...\n",
+      "第186首歌曲热评抓取成功\n",
+      "正在抓取第187首歌曲热评...\n",
+      "第187首歌曲热评抓取成功\n",
+      "正在抓取第188首歌曲热评...\n",
+      "第188首歌曲热评抓取成功\n",
+      "正在抓取第189首歌曲热评...\n",
+      "第189首歌曲热评抓取成功\n",
+      "正在抓取第190首歌曲热评...\n",
+      "第190首歌曲热评抓取成功\n",
+      "正在抓取第191首歌曲热评...\n",
+      "第191首歌曲热评抓取成功\n",
+      "正在抓取第192首歌曲热评...\n",
+      "第192首歌曲热评抓取成功\n",
+      "正在抓取第193首歌曲热评...\n",
+      "第193首歌曲热评抓取成功\n",
+      "正在抓取第194首歌曲热评...\n",
+      "第194首歌曲热评抓取成功\n",
+      "正在抓取第195首歌曲热评...\n",
+      "第195首歌曲热评抓取成功\n",
+      "正在抓取第196首歌曲热评...\n",
+      "第196首歌曲热评抓取成功\n",
+      "正在抓取第197首歌曲热评...\n",
+      "第197首歌曲热评抓取成功\n",
+      "正在抓取第198首歌曲热评...\n",
+      "第198首歌曲热评抓取成功\n",
+      "正在抓取第199首歌曲热评...\n",
+      "第199首歌曲热评抓取成功\n"
      ]
     }
    ],
    "source": [
+    "#-*- coding:utf-8 -*-\n",
     "#!/usr/bin/env python3\n",
     "# -*- coding: utf-8 -*-\n",
     "\n",
@@ -47,7 +431,7 @@
     "        'User-Agent':'Mozilla/5.0 (X11; Fedora; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/58.0.3029.110 Safari/537.36'\n",
     "    }\n",
     "    request=urllib.request.Request(url=url, headers=header)\n",
-    "    html=urllib.request.urlopen(request).read().decode('utf8','ignore')   #打开url\n",
+    "    html=urllib.request.urlopen(request).read().decode('utf8')   #打开url\n",
     "    html=str(html)     #转换成str\n",
     "    pat1=r'<ul class=\"f-hide\"><li><a href=\"/song\\?id=\\d*?\">.*</a></li></ul>'  #进行第一次筛选的正则表达式\n",
     "    result=re.compile(pat1).findall(html)     #用正则表达式进行筛选\n",
@@ -69,13 +453,13 @@
     "    data={'params':'zC7fzWBKxxsm6TZ3PiRjd056g9iGHtbtc8vjTpBXshKIboaPnUyAXKze+KNi9QiEz/IieyRnZfNztp7yvTFyBXOlVQP/JdYNZw2+GRQDg7grOR2ZjroqoOU2z0TNhy+qDHKSV8ZXOnxUF93w3DA51ADDQHB0IngL+v6N8KthdVZeZBe0d3EsUFS8ZJltNRUJ','encSecKey':'4801507e42c326dfc6b50539395a4fe417594f7cf122cf3d061d1447372ba3aa804541a8ae3b3811c081eb0f2b71827850af59af411a10a1795f7a16a5189d163bc9f67b3d1907f5e6fac652f7ef66e5a1f12d6949be851fcf4f39a0c2379580a040dc53b306d5c807bf313cc0e8f39bf7d35de691c497cda1d436b808549acc'}\n",
     "    postdata=urllib.parse.urlencode(data).encode('utf8')  #进行编码\n",
     "    request=urllib.request.Request(url,headers=header,data=postdata)\n",
-    "    reponse=urllib.request.urlopen(request).read().decode('utf8','ignore')\n",
+    "    reponse=urllib.request.urlopen(request).read().decode('utf8')\n",
     "    json_dict=json.loads(reponse)   #获取json\n",
     "    hot_commit=json_dict['hotComments']  #获取json中的热门评论\n",
     "\n",
     "\n",
     "    num=0\n",
-    "    fhandle=open('./song_comments','a')  #写入文件\n",
+    "    fhandle=open('./song_comments','a',encoding='utf-8',errors='ignore')    #写入文件\n",
     "    fhandle.write(hot_song_name+':'+'\\n')\n",
     "\n",
     "    for item in hot_commit:\n",
@@ -96,6 +480,13 @@
     "    print('第%d首歌曲热评抓取成功'%(num+1))\n",
     "    num+=1\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
