--- a/MachineLearningMathBasic/2.9.8 杰卡德距离-薛冰冰.md
+++ b/MachineLearningMathBasic/2.9.8 杰卡德距离-薛冰冰.md
@@ -22,5 +22,21 @@ print (dist.pdist(matV,'jaccard'))
 结果：[0.5]
 ```
 
+-       Y = pdist(X, 'euclidean')
+
+       欧氏距离。
+
+    Y = pdist(X, 'minkowski', p=2.)
+
+      明氏距离(p-norm) 
+
+      Y = pdist(X, 'cityblock')
+
+       曼哈顿距离。
+
+
 >应用：
 >给定两个n维二元向量A、B，A、B的每一维都只能是0或者1，利用Jaccard相似系数来计算二者的相似性
+>过滤相似度很高的新闻，或者网页去重
+>考试防作弊系统
+>论文查重系统
