第一次整理

--- a/MachineLearningMathBasic/2.9.6 汉明距离 2.9.7 杰卡德相似系数-张子欣.md.md
+++ b/MachineLearningMathBasic/2.9.6 汉明距离 2.9.7 杰卡德相似系数-张子欣.md.md
@@ -12,7 +12,7 @@
 > >
 > > ​            A=0100 与 B=1001 A xor B=3 A和B的汉明距离为3。
 > >
-> > ![](C:\Users\Administrator\Desktop\汉明距离.jpg)
+> > ![](C:\Users\LY\Desktop\2.9.6，7的包\汉明距离.jpg)
 > >
 > > ## 3.汉明重量
 > >
@@ -29,7 +29,7 @@
 > >
 > > ## 6. 利用*Python numpy*计算汉明码
 > >
-> > ![](C:\Users\Administrator\Desktop\汉明码python.png)
+> > ![](C:\Users\LY\Desktop\2.9.6，7的包\汉明码python.png)
 
 > # *Jaccard*相似数
 >
@@ -73,9 +73,9 @@
 > >
 > >   相同：基于直角坐标系实现的
 > >
-> >   不同：![img](C:\Users\Administrator\Desktop\区别.jpg)
+> >   不同：![](C:\Users\LY\Desktop\2.9.6，7的包\区别.jpg)
 > >
-> > ![img](C:\Users\Administrator\Desktop\图片.png)
+> > ![](C:\Users\LY\Desktop\2.9.6，7的包\图片.png)
 > >
 > > **余弦相似度的特点：**
 > >
