--- a/MachineLearningMathBasic/3.6  期望-卢俊成.md
+++ b/MachineLearningMathBasic/3.6  期望-卢俊成.md
@@ -20,6 +20,7 @@
 
 代码展示
 
+```python
 import numpy as np  
 n = int(input()) 
 A = np.zeros(shape=(n,3))       
@@ -33,3 +34,5 @@ Ex = 0
 for j in range(n):
     Ex += A[j][0]*(A[j][1]/100)
 print('{:.3f}'.format(Ex)) 
+```
+
