--- a/MachineLearningMathBasic/4.6 最大熵模型-阮梦旗.md
+++ b/MachineLearningMathBasic/4.6 最大熵模型-阮梦旗.md
@@ -1,7 +1,5 @@
 # 4-6 最大熵模型
 
-在概率模型中取一个限制条件，在符合限制条件的概率模型中，熵最大的模型为最优模型，即最大熵模型。q
+在概率模型中取一个限制条件，在符合限制条件的概率模型中，熵最大的模型为最优模型，即最大熵模型。
 
-
-
-![ce94df4e86a62f2fef8b2c4b94c4f2a](C:\Users\rmq\Desktop\ce94df4e86a62f2fef8b2c4b94c4f2a.png)
+![](C:\Users\LY\Desktop\4.6.png)
